tests/query_errors/duplicate_stream_name/error.txt
Error: 
    2 | create stream snot; #  this should error
      | ^^^^^^^^^^^^^^^^^^ duplicate stream name
